# groovy-commutator

./: .gitignore  CLAUDE.md  DESIGN_BRIEF.md  INTERACTIVE_EXPLORER_SPEC.md  NOTES.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: pages.yml
notebooks/: 01_exploration.ipynb
public/: concepts.html  findings.html  index.html
public/assets/css/: site.css
results/: absential_2d.csv  absential_classes.csv  drain_predictor.parquet  image_ratios.csv  metaevolution_generators.csv  metaevolution_pairs.csv  metaevolution_scale.csv  nonuniform_rulefield.csv  prehoc_coupling.csv  sweep_full.parquet  sweep_full_classified.parquet  sweep_summary.csv
scripts/: aggregate_sweep.py  build_findings_assets.py  experiment_absential_2d.py  experiment_drain_predictor.py  experiment_drain_scaling.py  experiment_memory_variants.py  experiment_metaevolution_pairs.py  experiment_metaevolution_scale.py  experiment_nonuniform.py  experiment_nonuniform_2d.py  experiment_nonuniform_scaling.py  experiment_nonuniform_transport.py  experiment_prehoc_coupling.py  experiment_threshold_check.py  precompute_image_ratios.py  run_full_sweep.py
site/: concepts.html  explorer.html  findings.html  index.html  package-lock.json  package.json  questions.html  vite.config.js
site/src/components/: AmbientCA.jsx  Concepts.jsx  Explorer.jsx  Findings.jsx  Home.jsx  InstrumentViewer.jsx  Nav.jsx  Questions.jsx  Watermark.jsx
src/groovy/: __init__.py  ca.py  ca2d.py  classify.py  metaevolution.py  metrics.py  nonuniform.py  operators.py  prehoc.py  secondorder.py
(+25 files in other folders)
