[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "groovy-commutator"
version = "0.1.0"
description = "An operator-commutator framework for cellular automata, generalized from single rules to rule pairs."
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]
